<resources>
    <string name="app_name">Take Note</string>
    <string name="facebook_application_id">962142674289252</string>
    <string name="fb_login_protocol_scheme">fb962142674289252</string>
    <string name="login_with_facebook">login with facebook</string>
    <string name="login_with_google">login with google</string>
    <string name="login_sign_up_using_email">login/sign up using email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="proceed">proceed</string>
    <string name="enter_email_address_for_verification">Enter Email Address for verification</string>
    <string name="use_your_email_id_to_login_to_your_account">Use your email ID to login to your account</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="sign_up">sign up</string>
    <string name="username">Username</string>
    <string name="fullName">FullName</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="search_note">Search Note</string>
    <string name="profile_info">profile info</string>
    <string name="instructions">Please provide your name and an optional profile photo</string>
    <string name="next">next</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="save">save</string>
    <string name="cancel">Cancel</string>
    <string name="logout">logout</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="add_note">Add Note</string>
    <string name="search_hint">Search Note</string>
    <string name="add_reminder">Add Reminder</string>ng>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="reminder_icon">Reminder Icon</string>
    <string name="delete">Delete</string>
    <string name="channel_name">Reminder Channel</string>
    <string name="channel_description">Reminder Channel Description</string>
</resources>